--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.ngelmakproject</groupId>
-	<artifactId>api-gateway</artifactId>
+	<artifactId>ngelmak-api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ngelmak-api-gateway</name>
+	<name>Ngelmak API Gateway</name>
 	<description>Main entrypoint of Ngelmak microservices</description>
 	<url />
 	<licenses>
@@ -28,7 +28,7 @@
 		<url />
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
